--- a/notebooks/diff_bootstrap_sizes_exp/Baseline_acs_income/10/ACS_Income_Batch1-Copy2.ipynb
+++ b/notebooks/diff_bootstrap_sizes_exp/Baseline_acs_income/10/ACS_Income_Batch1-Copy2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be8270a2",
+   "id": "d41c6638",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cda15aa3",
+   "id": "82ae4397",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T14:27:52.726614Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "215a9b64",
+   "id": "c71ad91a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T14:28:01.243911Z",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fe5cd447",
+   "id": "7f786621",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:37.857077Z",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "46f39614",
+   "id": "52abe8e2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:42.911721Z",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "49030b9a",
+   "id": "142a58ae",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:43.391627Z",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94a49c32",
+   "id": "bef84d7e",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dae9b67d",
+   "id": "4f29e0a8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:49.735350Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab0a7436",
+   "id": "cf227904",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "04424944",
+   "id": "392ca22c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:50.723358Z",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad9bbc79",
+   "id": "277de17e",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d27877a6",
+   "id": "73feb2b0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:52.451405Z",
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "42b66e24",
+   "id": "ac01409e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:53.005423Z",
@@ -236,8 +236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "24f5cc36",
+   "execution_count": 8,
+   "id": "8b748562",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:53.757610Z",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d428f61",
+   "id": "264f8134",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -273,8 +273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "b17a7f0c",
+   "execution_count": 9,
+   "id": "d58aa2d3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:07:01.822930Z",
@@ -394,7 +394,7 @@
        "4   19   1   1  8990    6    2   1     1    37  42.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,8 +407,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "c4cc078f",
+   "execution_count": 10,
+   "id": "4a5b4b20",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:07:01.920504Z",
@@ -422,7 +422,7 @@
        "(15000, 10)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb301604",
+   "id": "33959e1f",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9710f6c4",
+   "id": "00627c14",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f9217885",
+   "id": "fa4b0257",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:07:02.518662Z",
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cac3702d",
+   "id": "45ff6d3d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:07:02.757844Z",
@@ -490,8 +490,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "e1ddd1b3",
+   "execution_count": null,
+   "id": "df8043e1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:08:11.330537Z",
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f18ff26",
+   "id": "8e57c135",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "47dd688d",
+   "id": "79019656",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6e86db19",
+   "id": "246ccc05",
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc272dff",
+   "id": "b3b186a8",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -778,8 +778,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "3065094b",
+   "execution_count": 11,
+   "id": "6dbb796a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,15 +799,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "4c5a72ce",
+   "execution_count": null,
+   "id": "11900521",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-24 11:56:31 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-02-24 17:02:27 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -818,16 +818,16 @@
       "{'dataset_split_seed': 300,\n",
       " 'experiment_iteration': 'Exp_iter_3',\n",
       " 'fair_intervention_params_lst': '[0.0]',\n",
-      " 'intervention_param': 0.0,\n",
       " 'model_init_seed': 300,\n",
-      " 'run_start_date_time': datetime.datetime(2024, 2, 24, 16, 37, 32, 273935, tzinfo=datetime.timezone.utc),\n",
-      " 'session_uuid': 'd9a91e93-d876-40fe-98be-41ec023e789f'}\n"
+      " 'session_uuid': '0f6a39fe-817f-42a6-99d0-a0801d2722bf'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97985ac915f44387b67122b706e924e8",
+       "model_id": "fc7e2f6fdf1e4b40b29c7971e89a21bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -842,9 +842,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-24 11:56:31 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-02-24 17:02:28 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-02-24 11:56:31 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-02-24 17:02:28 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -877,7 +877,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01e1575eb6ef41bc8204f500c0d2350d",
+       "model_id": "191cc73777c442148c9fe8fc05a011f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -891,12 +891,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e4146ddfee14d02a5c7c66aa612b8c5",
+       "model_id": "25fdb18d2f6a461cbfc7997e45dd94b1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Classifiers testing by bootstrap:   0%|          | 0/101 [00:00<?, ?it/s]"
+       "Classifiers testing by bootstrap:   0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6190a672",
+   "id": "8268b08c",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "753dd016",
+   "id": "df9f611b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6af5b31a",
+   "id": "f5465233",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f90b4b9",
+   "id": "cfadfd7c",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40692035",
+   "id": "237282d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4e9669b",
+   "id": "d7e11849",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ddad4ae",
+   "id": "576e9d83",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1035,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0458b50e",
+   "id": "46977ee1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebbdb2bb",
+   "id": "c33e9281",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32479265",
+   "id": "71471e6c",
    "metadata": {},
    "outputs": [],
    "source": []
