--- a/notebooks/diff_bootstrap_sizes_exp/Baseline_acs_income/10/ACS_Income_Batch1-Copy1.ipynb
+++ b/notebooks/diff_bootstrap_sizes_exp/Baseline_acs_income/10/ACS_Income_Batch1-Copy1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be8270a2",
+   "id": "632e90b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cda15aa3",
+   "id": "e21df4ab",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T14:27:52.726614Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "215a9b64",
+   "id": "2813f3d4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T14:28:01.243911Z",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fe5cd447",
+   "id": "fc824cf9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:37.857077Z",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "46f39614",
+   "id": "0c2a4173",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:42.911721Z",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "49030b9a",
+   "id": "26973653",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:43.391627Z",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94a49c32",
+   "id": "c2dee8b5",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dae9b67d",
+   "id": "0e809636",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:49.735350Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab0a7436",
+   "id": "b7462bdc",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "04424944",
+   "id": "98f9c3b6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:50.723358Z",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad9bbc79",
+   "id": "09306d50",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d27877a6",
+   "id": "1a351b9f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:52.451405Z",
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "42b66e24",
+   "id": "1cbc003a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:53.005423Z",
@@ -236,8 +236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "24f5cc36",
+   "execution_count": 8,
+   "id": "fb166525",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:53.757610Z",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d428f61",
+   "id": "a76c4c78",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -273,8 +273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "b17a7f0c",
+   "execution_count": 9,
+   "id": "16ffe144",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:07:01.822930Z",
@@ -394,7 +394,7 @@
        "4   19   1   1  8990    6    2   1     1    37  42.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,8 +407,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "c4cc078f",
+   "execution_count": 10,
+   "id": "428eb1b2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:07:01.920504Z",
@@ -422,7 +422,7 @@
        "(15000, 10)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb301604",
+   "id": "af78c630",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9710f6c4",
+   "id": "6c5165ae",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f9217885",
+   "id": "3b6047b8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:07:02.518662Z",
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cac3702d",
+   "id": "bc0bb33a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:07:02.757844Z",
@@ -490,8 +490,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "e1ddd1b3",
+   "execution_count": null,
+   "id": "808d6871",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:08:11.330537Z",
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f18ff26",
+   "id": "1750adf8",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -626,8 +626,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "47dd688d",
+   "execution_count": 11,
+   "id": "5b171636",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,15 +647,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "6e86db19",
+   "execution_count": 12,
+   "id": "ac9c3bc3",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-24 11:37:31 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-02-24 17:01:43 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -666,16 +666,16 @@
       "{'dataset_split_seed': 200,\n",
       " 'experiment_iteration': 'Exp_iter_2',\n",
       " 'fair_intervention_params_lst': '[0.0]',\n",
-      " 'intervention_param': 0.0,\n",
       " 'model_init_seed': 200,\n",
-      " 'run_start_date_time': datetime.datetime(2024, 2, 24, 16, 17, 2, 907105, tzinfo=datetime.timezone.utc),\n",
-      " 'session_uuid': 'd9a91e93-d876-40fe-98be-41ec023e789f'}\n"
+      " 'session_uuid': '0f6a39fe-817f-42a6-99d0-a0801d2722bf'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "848eac2e9d5e400ab043ca87452e9313",
+       "model_id": "4b1526440e8142a8baa1a3fbed949aa1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -690,9 +690,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-24 11:37:32 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-02-24 17:01:43 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-02-24 11:37:32 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-02-24 17:01:43 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -725,7 +725,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42420f59483e4e82add5d2df86f81e38",
+       "model_id": "fb26d88ecbc34b068a42d7f8f31a45d5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -739,12 +739,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f55b7adf73a40b48a262d89b3dae73b",
+       "model_id": "88a81cf6eaa64fc9bbfc9aeaf4e45fcf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Classifiers testing by bootstrap:   0%|          | 0/101 [00:00<?, ?it/s]"
+       "Classifiers testing by bootstrap:   0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc272dff",
+   "id": "0789d4ba",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3065094b",
+   "id": "57148c4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4c5a72ce",
+   "id": "febf43a6",
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6190a672",
+   "id": "363ecb7a",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "753dd016",
+   "id": "836ae1e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6af5b31a",
+   "id": "1bbbb8fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f90b4b9",
+   "id": "f615cb85",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40692035",
+   "id": "a0e3fd2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4e9669b",
+   "id": "6b23682b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ddad4ae",
+   "id": "8a71b89b",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1035,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0458b50e",
+   "id": "fa18de66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebbdb2bb",
+   "id": "aac83369",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32479265",
+   "id": "538df5ae",
    "metadata": {},
    "outputs": [],
    "source": []
