--- a/notebooks/diff_bootstrap_sizes_exp/Baseline_acs_income/10/ACS_Income_Batch1-Copy4.ipynb
+++ b/notebooks/diff_bootstrap_sizes_exp/Baseline_acs_income/10/ACS_Income_Batch1-Copy4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be8270a2",
+   "id": "9ba009b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cda15aa3",
+   "id": "ee5e0a12",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T14:27:52.726614Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "215a9b64",
+   "id": "40d11033",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T14:28:01.243911Z",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fe5cd447",
+   "id": "7d038255",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:37.857077Z",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "46f39614",
+   "id": "5f3d8780",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:42.911721Z",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "49030b9a",
+   "id": "668bdb50",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:43.391627Z",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94a49c32",
+   "id": "c65f3667",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dae9b67d",
+   "id": "1a24ff17",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:49.735350Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab0a7436",
+   "id": "3fa98e87",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "04424944",
+   "id": "a9e4d785",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:50.723358Z",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad9bbc79",
+   "id": "595d7a6f",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d27877a6",
+   "id": "23c6867d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:52.451405Z",
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "42b66e24",
+   "id": "79ff3606",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:53.005423Z",
@@ -236,8 +236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "24f5cc36",
+   "execution_count": 8,
+   "id": "4742ce6b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:53.757610Z",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d428f61",
+   "id": "d29ebd08",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -273,8 +273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "b17a7f0c",
+   "execution_count": 9,
+   "id": "d62ea7f4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:07:01.822930Z",
@@ -394,7 +394,7 @@
        "4   19   1   1  8990    6    2   1     1    37  42.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,8 +407,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "c4cc078f",
+   "execution_count": 10,
+   "id": "b9ff4bee",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:07:01.920504Z",
@@ -422,7 +422,7 @@
        "(15000, 10)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb301604",
+   "id": "2d842bd1",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9710f6c4",
+   "id": "5d521f1c",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f9217885",
+   "id": "60d2e8fc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:07:02.518662Z",
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cac3702d",
+   "id": "eae735f4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:07:02.757844Z",
@@ -490,8 +490,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "e1ddd1b3",
+   "execution_count": null,
+   "id": "34e89bec",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:08:11.330537Z",
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f18ff26",
+   "id": "c3c40248",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "47dd688d",
+   "id": "2da8b912",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6e86db19",
+   "id": "fde82a6e",
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc272dff",
+   "id": "fac0f05c",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3065094b",
+   "id": "828c7bae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4c5a72ce",
+   "id": "1a192802",
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6190a672",
+   "id": "f504aadf",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "753dd016",
+   "id": "45edfe83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6af5b31a",
+   "id": "ac7b5790",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f90b4b9",
+   "id": "02b84797",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -982,8 +982,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "40692035",
+   "execution_count": 11,
+   "id": "978d4a21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,9 +1004,109 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4e9669b",
+   "id": "63ebd754",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-24 17:03:10 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "INFO:root:Start an experiment iteration for the following custom params:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'dataset_split_seed': 500,\n",
+      " 'experiment_iteration': 'Exp_iter_5',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'model_init_seed': 500,\n",
+      " 'session_uuid': '0f6a39fe-817f-42a6-99d0-a0801d2722bf'}\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e105563e3ce4605814bfe98f5bdc33c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple alphas:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-24 17:03:10 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "INFO:root:The dataset is preprocessed\n",
+      "2024-02-24 17:03:10 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "INFO:root:Models config is loaded from the input file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.0\n",
+      "Skip preprocessing\n",
+      "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
+      "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
+      "       'cat__SCHL_17', 'cat__SCHL_18',\n",
+      "       ...\n",
+      "       'cat__RELP_2', 'cat__RELP_3', 'cat__RELP_4', 'cat__RELP_5',\n",
+      "       'cat__RELP_6', 'cat__RELP_7', 'cat__RELP_8', 'cat__RELP_9', 'num__AGEP',\n",
+      "       'num__WKHP'],\n",
+      "      dtype='object', length=725)\n",
+      "Top indexes of an X_test in the current base flow dataset:  Int64Index([ 8104,   580,  8954,  6500,  5436,  3490,  1621, 11610,  7067,\n",
+      "            10637,   767, 10997,  6202,  4468,  8440, 10810, 11409,  3682,\n",
+      "            12856, 14104],\n",
+      "           dtype='int64')\n",
+      "Top indexes of an y_test in the current base flow dataset:  Int64Index([ 8104,   580,  8954,  6500,  5436,  3490,  1621, 11610,  7067,\n",
+      "            10637,   767, 10997,  6202,  4468,  8440, 10810, 11409,  3682,\n",
+      "            12856, 14104],\n",
+      "           dtype='int64')\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_bootstrap_sizes_exp/Baseline_acs_income/50/tuning_results_Folktables_CA_2018_Income_alpha_0.0_20240224__154709.csv\n",
+      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 50, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 500, 'n_jobs': None, 'oob_score': False, 'random_state': 500, 'verbose': 0, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7c10161ce9f94e03920a42d222f8270e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze multiple models:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6f3a2f7fc9444331a78dbbb2e9c41313",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "run_exp_iter_with_disparate_impact(data_loader=exp_iter_data_loader,\n",
     "                                   experiment_seed=experiment_seed,\n",
@@ -1026,7 +1126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ddad4ae",
+   "id": "2674fc66",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1035,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0458b50e",
+   "id": "3a4d8db7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebbdb2bb",
+   "id": "b3044b96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32479265",
+   "id": "d906a55d",
    "metadata": {},
    "outputs": [],
    "source": []
