Updated visualizations for meta learner testing

--- a/notebooks/visualizations_for_all_datasets/Meta_Learner_Testing.ipynb
+++ b/notebooks/visualizations_for_all_datasets/Meta_Learner_Testing.ipynb
@@ -6,8 +6,8 @@
    "id": "0f667f8f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:46:58.611357Z",
-     "start_time": "2024-03-05T10:46:58.591093Z"
+     "end_time": "2024-03-05T13:54:52.998097Z",
+     "start_time": "2024-03-05T13:54:52.974929Z"
     }
    },
    "outputs": [],
@@ -23,8 +23,8 @@
    "id": "0f28e72a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:46:58.626061Z",
-     "start_time": "2024-03-05T10:46:58.611477Z"
+     "end_time": "2024-03-05T13:54:53.012350Z",
+     "start_time": "2024-03-05T13:54:52.998224Z"
     }
    },
    "outputs": [],
@@ -41,8 +41,8 @@
    "id": "3c3bc544",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:46:58.643729Z",
-     "start_time": "2024-03-05T10:46:58.627409Z"
+     "end_time": "2024-03-05T13:54:53.032239Z",
+     "start_time": "2024-03-05T13:54:53.014072Z"
     }
    },
    "outputs": [
@@ -76,8 +76,8 @@
    "id": "c39ce22f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:47:02.377751Z",
-     "start_time": "2024-03-05T10:46:58.641644Z"
+     "end_time": "2024-03-05T13:54:58.097636Z",
+     "start_time": "2024-03-05T13:54:53.029359Z"
     }
    },
    "outputs": [
@@ -109,22 +109,22 @@
    "id": "bb4da773",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:47:02.418013Z",
-     "start_time": "2024-03-05T10:47:02.379224Z"
+     "end_time": "2024-03-05T13:54:58.143385Z",
+     "start_time": "2024-03-05T13:54:58.099110Z"
     }
    },
    "outputs": [],
    "source": [
     "DB_COLLECTION_NAME = 'one_repair_lvl_many_models'\n",
     "DATASETS_DB_CONFIG = {\n",
-    "    # 'Folktables_GA_2018_Income': {\n",
-    "    #     'Bootstrap': 'ac796b56-9c83-474a-8e7a-2d95ee5efa7e',\n",
-    "    #     'Meta_Learner': '8c9cf23a-9b8f-49fd-a7e2-270c2c3db69c',\n",
-    "    # },\n",
-    "    'Law_School': {\n",
-    "        'Bootstrap': 'b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6',\n",
-    "        'Meta_Learner': '9c3f16a8-fc31-4bb1-b6a8-c535326d57d4',\n",
+    "    'Folktables_GA_2018_Income': {\n",
+    "        'Bootstrap': 'ac796b56-9c83-474a-8e7a-2d95ee5efa7e',\n",
+    "        'Meta_Learner': '8c9cf23a-9b8f-49fd-a7e2-270c2c3db69c',\n",
     "    },\n",
+    "    # 'Law_School': {\n",
+    "    #     'Bootstrap': 'b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6',\n",
+    "    #     'Meta_Learner': '9c3f16a8-fc31-4bb1-b6a8-c535326d57d4',\n",
+    "    # },\n",
     "}\n",
     "DATASET_NAMES = list(DATASETS_DB_CONFIG.keys())\n",
     "MODEL_NAMES = ['LR', 'RF']\n",
@@ -195,8 +195,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:47:02.459824Z",
-     "start_time": "2024-03-05T10:47:02.420487Z"
+     "end_time": "2024-03-05T13:54:58.188945Z",
+     "start_time": "2024-03-05T13:54:58.145946Z"
     }
    },
    "id": "491ceee1bd7f0bf"
@@ -223,8 +223,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:47:07.702709Z",
-     "start_time": "2024-03-05T10:47:02.460012Z"
+     "end_time": "2024-03-05T13:55:03.737644Z",
+     "start_time": "2024-03-05T13:54:58.189082Z"
     }
    },
    "id": "531f1da00b096cdf"
@@ -235,8 +235,8 @@
    "id": "6f127a0f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:47:07.770967Z",
-     "start_time": "2024-03-05T10:47:07.703899Z"
+     "end_time": "2024-03-05T13:55:03.788394Z",
+     "start_time": "2024-03-05T13:55:03.733881Z"
     }
    },
    "outputs": [
@@ -260,8 +260,8 @@
    "id": "386203af",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:47:07.834053Z",
-     "start_time": "2024-03-05T10:47:07.773140Z"
+     "end_time": "2024-03-05T13:55:03.844498Z",
+     "start_time": "2024-03-05T13:55:03.785983Z"
     }
    },
    "outputs": [
@@ -337,8 +337,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:47:07.892167Z",
-     "start_time": "2024-03-05T10:47:07.825658Z"
+     "end_time": "2024-03-05T13:55:03.914649Z",
+     "start_time": "2024-03-05T13:55:03.837597Z"
     }
    },
    "id": "1839430363b0d1e4"
@@ -370,8 +370,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:47:07.936433Z",
-     "start_time": "2024-03-05T10:47:07.869599Z"
+     "end_time": "2024-03-05T13:55:03.943498Z",
+     "start_time": "2024-03-05T13:55:03.881790Z"
     }
    },
    "id": "a803c2da42d4b5c8"
@@ -406,8 +406,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:47:08.228140Z",
-     "start_time": "2024-03-05T10:47:07.910335Z"
+     "end_time": "2024-03-05T13:55:04.276768Z",
+     "start_time": "2024-03-05T13:55:03.933268Z"
     }
    },
    "id": "d2fa237f193ad058"
@@ -442,8 +442,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:47:08.434079Z",
-     "start_time": "2024-03-05T10:47:08.225393Z"
+     "end_time": "2024-03-05T13:55:04.560050Z",
+     "start_time": "2024-03-05T13:55:04.277470Z"
     }
    },
    "id": "1c6e691b9484b6f8"
@@ -478,8 +478,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:47:08.630673Z",
-     "start_time": "2024-03-05T10:47:08.430994Z"
+     "end_time": "2024-03-05T13:55:04.779960Z",
+     "start_time": "2024-03-05T13:55:04.557692Z"
     }
    },
    "id": "3eb458e07b0062ea"
@@ -514,8 +514,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:47:08.940553Z",
-     "start_time": "2024-03-05T10:47:08.631512Z"
+     "end_time": "2024-03-05T13:55:05.109469Z",
+     "start_time": "2024-03-05T13:55:04.777104Z"
     }
    },
    "id": "513844bb74816a3b"
@@ -561,8 +561,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:47:09.267725Z",
-     "start_time": "2024-03-05T10:47:08.941419Z"
+     "end_time": "2024-03-05T13:55:05.441878Z",
+     "start_time": "2024-03-05T13:55:05.109922Z"
     }
    },
    "id": "c470a72a74464cba"
@@ -598,8 +598,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:47:09.476715Z",
-     "start_time": "2024-03-05T10:47:09.265154Z"
+     "end_time": "2024-03-05T13:55:05.661134Z",
+     "start_time": "2024-03-05T13:55:05.438359Z"
     }
    },
    "id": "fefc5afaa8e18f13"
@@ -635,8 +635,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:47:09.785361Z",
-     "start_time": "2024-03-05T10:47:09.473523Z"
+     "end_time": "2024-03-05T13:55:06.002649Z",
+     "start_time": "2024-03-05T13:55:05.658669Z"
     }
    },
    "id": "e36871ebbc3b214d"
@@ -649,8 +649,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T10:47:09.789900Z",
-     "start_time": "2024-03-05T10:47:09.786039Z"
+     "end_time": "2024-03-05T13:55:06.007239Z",
+     "start_time": "2024-03-05T13:55:06.003748Z"
     }
    },
    "id": "1ed562ec5d1393e8"
