Added initial aggregations

--- a/notebooks/Diff_Fairness_Interventions_Aggregation.ipynb
+++ b/notebooks/Diff_Fairness_Interventions_Aggregation.ipynb
@@ -109,16 +109,6 @@
    "id": "9b15cd5fc9688a78"
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "## Initialize Configs"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "314436639a088474"
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "outputs": [],
@@ -207,7 +197,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Group Metrics Composition"
+    "## Load dataframes with metrics"
    ],
    "metadata": {
     "collapsed": false
@@ -303,7 +293,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Metric Aggregations"
+    "## Metric aggregations"
    ],
    "metadata": {
     "collapsed": false
